feat: enhance review form validation by adding author checks and tests